--- a/Code/styles.css
+++ b/Code/styles.css
@@ -6,6 +6,8 @@
           box-sizing: border-box;
   font-family: 'inter', sans-serif;
   font-size: 16px;
+  -webkit-transition: all .5s;
+  transition: all .5s;
 }
 
 :root {
@@ -13,6 +15,9 @@
   --Blanco: #fff;
   --Gris-01: #345b63;
   --Azul-01: #00A19D;
+  --Azul-02: #01706e;
+  --Amarillo-01: #FFB344;
+  --Amarillo-02: #f19f24;
   --Glass: rgba(255, 255, 255, 0.3);
 }
 
@@ -38,6 +43,10 @@ h4 {
 .reverse {
   -webkit-transform: scaleX(-1);
           transform: scaleX(-1);
+}
+
+img {
+  max-width: 100vw;
 }
 
 .bookmark-black {
@@ -129,7 +138,7 @@ header {
 
 .header-nav {
   padding: 3% 6%;
-  background-color: rgba(0, 0, 0, 0.247);
+  background-color: rgba(0, 0, 0, 0.219);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -157,9 +166,13 @@ header {
   margin: 0 20px;
   -ms-grid-column-align: end;
       justify-self: end;
-  background-color: var(--Gris-01);
+  background-color: var(--Glass);
   -webkit-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.267);
           box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.267);
+}
+
+.nav-categories > button:hover {
+  background-color: var(--Gris-01);
 }
 
 .nav-categories > button > a {
@@ -175,5 +188,247 @@ header {
   color: var(--Blanco);
   font-size: 25px;
   font-weight: 200;
+}
+
+/*========== SECTION #1 =========*/
+.section-01 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: var(--Azul-01);
+}
+
+.section-01 > .section-img {
+  margin-top: 5%;
+  margin-left: 10%;
+  width: 30%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  position: relative;
+}
+
+.section-01 > .section-img > img {
+  width: 100%;
+  height: 105%;
+  -webkit-box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.541);
+          box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.541);
+}
+
+.section-01 > .section-content {
+  margin-top: 10%;
+  margin-left: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.section-01 > .section-content > h2 {
+  color: var(--Amarillo-01);
+  font-weight: 600;
+  font-size: 7rem;
+  text-align: center;
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.247);
+}
+
+.section-01 > .section-content > h2 > img {
+  margin-left: 5%;
+}
+
+.section-01 > .section-content > p {
+  padding: 0 3%;
+  font-size: 2.7rem;
+  color: var(--Blanco);
+  font-weight: 300;
+  text-align: center;
+}
+
+.section-01 > .section-content > button {
+  width: 80%;
+  margin: 5% auto;
+  text-align: center;
+  border-radius: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: var(--Amarillo-01);
+  -webkit-box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.226);
+          box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.226);
+}
+
+.section-01 > .section-content > button:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  background-color: var(--Amarillo-02);
+}
+
+.section-01 > .section-content > button > a {
+  text-decoration: none;
+}
+
+.section-01 > .section-content > button > a > h6 {
+  padding: 7px;
+  font-size: 30px;
+  font-weight: 500;
+  color: var(--Gris-01);
+}
+
+/*===========SECCION #2=============*/
+.section-02 > .section-toppart {
+  margin: 0 18%;
+  margin-top: 10%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas: "titulo frases";
+  -webkit-column-gap: 3%;
+          column-gap: 3%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.section-02 > .section-toppart > .section-title {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: titulo;
+}
+
+.section-02 > .section-toppart > .section-title > h2 {
+  font-size: 120px;
+  font-weight: 700;
+  text-align: center;
+  color: var(--Gris-01);
+}
+
+.section-02 > .section-toppart > .section-content {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.phrase-01, .phrase-02 {
+  padding: 5px 15px;
+  border-right: 6px solid var(--Gris-01);
+}
+
+.phrase-01 {
+  margin-bottom: 7%;
+}
+
+.author {
+  margin-top: 15px;
+  font-weight: 600;
+}
+
+.section-02 > .section-toppart > .section-content > .phrase > p {
+  font-size: 32px;
+  color: var(--Gris-01);
+  text-align: right;
+}
+
+.section-02 .section-foot {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 5% 0;
+}
+
+.section-02 .section-foot h5 {
+  font-size: 32px;
+  font-weight: 300;
+  color: var(--Gris-01);
+  letter-spacing: 1.3px;
+}
+
+.section-03 {
+  margin-top: 7%;
+  background-color: var(--Amarillo-01);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 10px 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.section-03 .section-img-logo {
+  width: 180px;
+}
+
+.section-03 .section-img-logo img {
+  width: 100%;
+}
+
+.section-03 .section-content {
+  text-align: center;
+  position: relative;
+  color: var(--Blanco);
+}
+
+.section-03 .section-content h3 {
+  font-size: 70px;
+  font-weight: 700;
+}
+
+.section-03 .section-content h6 {
+  margin-top: 1%;
+  font-size: 45px;
+  font-weight: 300;
+}
+
+.section-03 .section-content button {
+  position: absolute;
+  bottom: -72px;
+  right: 0;
+  left: 0;
+  width: 40%;
+  margin: auto;
+  background-color: var(--Azul-01);
+  border-radius: 30px;
+  -webkit-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.226);
+          box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.226);
+}
+
+.section-03 .section-content button:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  background-color: var(--Azul-02);
+}
+
+.section-03 .section-content button a {
+  text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 10px 7px;
+}
+
+.section-03 .section-content button a h5 {
+  font-size: 35px;
+  color: var(--Blanco);
+  font-weight: 400;
+  margin-right: 10px;
+}
+
+.section-03 .section-content button a img {
+  width: 15px;
 }
 /*# sourceMappingURL=styles.css.map */
