--- a/Code/styles.css
+++ b/Code/styles.css
@@ -22,18 +22,87 @@
 }
 
 h1 {
-  font-size: 120px;
   font-weight: 600;
 }
 
+@media screen and (max-width: 50000px) {
+  h1 {
+    font-size: 100px;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  h1 {
+    font-size: 90px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  h1 {
+    font-size: 50px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: 30px;
+  }
+}
+
 h2 {
-  font-size: 65px;
   font-weight: 400;
 }
 
+@media screen and (max-width: 50000px) {
+  h2 {
+    font-size: 70px;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  h2 {
+    font-size: 50px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  h2 {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  h2 {
+    font-size: 20px;
+  }
+}
+
 h3 {
-  font-size: 50px;
   font-weight: 400;
+}
+
+@media screen and (max-width: 50000px) {
+  h3 {
+    font-size: 55px;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  h3 {
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  h3 {
+    font-size: 25px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  h3 {
+    font-size: 18px;
+  }
 }
 
 h4 {
@@ -127,7 +196,25 @@ header {
 }
 
 .header-center > h2 {
-  line-height: 60px;
+  line-height: 100px;
+}
+
+@media screen and (max-width: 1080px) {
+  .header-center > h2 {
+    line-height: 75px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .header-center > h2 {
+    line-height: 45px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .header-center > h2 {
+    line-height: 30px;
+  }
 }
 
 .header-center > h3 {
@@ -263,8 +350,8 @@ header {
 }
 
 .section-01 > .section-content > button:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
   background-color: var(--Amarillo-02);
 }
 
@@ -405,8 +492,8 @@ header {
 }
 
 .section-03 .section-content button:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
   background-color: var(--Azul-02);
 }
 
@@ -430,5 +517,77 @@ header {
 
 .section-03 .section-content button a img {
   width: 15px;
+}
+
+/*=============== ARTICULO 01 ===============*/
+.article-01 {
+  margin: 5% 10%;
+  margin-right: 0;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+}
+
+.article-01 img {
+  width: 70%;
+}
+
+.article-01 .article-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-image: url(../Imgs/media/barsss.svg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  text-align: right;
+  color: var(--Gris-01);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-right: 25%;
+}
+
+.article-01 .article-content h3 {
+  margin-bottom: 3%;
+  font-weight: 500;
+}
+
+.article-01 .article-content p {
+  padding-left: 15%;
+  margin-bottom: 3%;
+  font-size: 25px;
+}
+
+.article-01 .article-content button {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  padding: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: var(--Azul-01);
+  border-radius: 30px;
+}
+
+.article-01 .article-content button:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  background: var(--Azul-02);
+}
+
+.article-01 .article-content button a {
+  width: 100%;
+  color: var(--Blanco);
+  text-align: center;
+  text-decoration: none;
+}
+
+.article-01 .article-content button a p {
+  padding: 5px 15px;
 }
 /*# sourceMappingURL=styles.css.map */
