--- a/Code/styles.scss
+++ b/Code/styles.scss
@@ -1,499 +1,4 @@
-/*==================== ESTILOS GENERALES ====================*/
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'inter', sans-serif;
-    font-size: 16px;
-    transition: all .5s;
-}
+/*== ROOT ==*/
 
-:root{
-    --Negro: #000;
-    --Blanco: #fff;
-    --Gris-01: #345b63;
-    --Azul-01: #00A19D;
-    --Azul-02: #01706e;
-    --Amarillo-01: #FFB344;
-    --Amarillo-02: #f19f24;
-    --Glass: rgba(255, 255, 255, 0.3);
-}
-
-$breakpoints: (
-    "phone":        480px,    
-    "tablet":       800px,   
-    "desktop":      1080px,
-    "infinite":     50000px
-);
-
-@mixin mq($breakpoint){
-    @media screen and (max-width: map-get($breakpoints, $breakpoint)){
-        @content
-    }
-}
-
-h1{
-    font-weight: 600;
-
-    @include mq("infinite") {
-    font-size: 100px;
-    }    
-    @include mq("desktop") {
-        font-size: 90px;
-    }
-    @include mq("tablet") {
-        font-size: 50px;
-    }   
-    @include mq("phone") {
-        font-size: 30px;
-    }
-}
-
-h2{
-    font-weight: 400;
-
-    @include mq("infinite") {
-        font-size: 70px;
-    }    
-    @include mq("desktop") {
-        font-size: 50px;
-    }
-    @include mq("tablet") {
-        font-size: 30px;
-    }   
-    @include mq("phone") {
-        font-size: 20px;
-    }
-
-}
-
-h3{font-weight: 400;
-
-    @include mq("infinite") {
-        font-size: 55px;
-    }    
-    @include mq("desktop") {
-        font-size: 40px;
-    }
-    @include mq("tablet") {
-        font-size: 25px;
-    }   
-    @include mq("phone") {
-        font-size: 18px;
-    }}
-
-h4{font-size: 35px;}
-
-.reverse{
-    transform: scaleX(-1);
-}
-
-img{
-    max-width: 100vw;
-}
-
-.bookmark-black{
-    fill: #000;
-}
-
-button{
-    border: none;
-}
-
-/*============ HEADER ==============*/
-
-header{
-    background: url("../Imgs/nasa-gYwfpVI2JzM-unsplash.jpg");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    color: var(--Blanco);
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
-}
-
-.header-top{
-    padding-top: 2%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 5%;
-}
-
-.icons{
-    
-    display: flex;
-    width: clamp(10%,300px,14%);
-    
-}
-
-.icons>img{
-    object-fit:contain;
-    width: 100%;
-    margin-right:3%;
-}
-
-.Logo{
-    justify-self: center;
-    display: flex;
-    align-items: center;
-    color: var(--Blanco);
-    text-shadow: .5px .9px .2px rgba(0, 0, 0, 0.253);
-}   
-
-#logo-icon-yellowS{
-    margin: 0 3%;
-    width: clamp(10%,100px,30%);
-}
-.bars{
-    width: clamp(10%,300px,14%);
-    height: minmax(10px,30px);
-}
-.bars>#menu-icon{
-    width: 20%;
-    height: clamp(1%,20px,2%);
-    float: right;
-}
-
-.header-center{
-    margin: 3% 0 13% 15%;
-}
-
-.header-center>h2{
-    line-height: 100px;
-
-    @include mq("desktop") {
-        line-height: 75px;
-    }
-    @include mq("tablet") {
-        line-height: 45px;
-    }   
-    @include mq("phone") {
-        line-height: 30px;
-    }
-}
-
-.header-center>h3{
-    letter-spacing:4px;
-    font-weight: 200;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.438);   
-}
-
-.header-nav{
-    padding: 3% 6%;
-    background-color:rgba(0, 0, 0, 0.219) ;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-
-}
-
-.nav-categories{
-    display: flex;
-}
-
-.nav-title{
-    border-bottom: 2px solid #fff;
-}
-
-.nav-categories>button{
-    width: 180px;
-    height: 160px;
-    border-radius: 20%;
-    margin: 0 20px;
-    justify-self: end;
-    background-color: var(--Glass);
-    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.267);
-
-    &:hover{
-        background-color: var(--Gris-01);
-    }
-}
-
-.nav-categories>button>a{
-    text-decoration: none;
-}
-
-.nav-categories>button>a>img{
-    width: 100px;
-    height: 100px;
-}
-
-.nav-categories>button>a>h5{
-    color: var(--Blanco);
-    font-size: 25px;
-    font-weight: 200;
-}
-/*========== SECTION #1 =========*/
-
-.section-01{
-    display: flex;
-    background-color: var(--Azul-01);
-}
-
-.section-01>.section-img{
-    margin-top: 5%;
-    margin-left: 10%;
-    width:30%;
-    object-fit: contain;
-    position: relative;
-}
-.section-01>.section-img>img{
-    width: 100%;
-    height: 105%;
-    box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.541);
-  
-}
-
-.section-01>.section-content{
-    margin-top:10%;
-    margin-left: 10%;
-    display: flex;
-    flex-direction: column;
-}
-
-.section-01>.section-content>h2{
-    color: var(--Amarillo-01);
-    font-weight: 600;
-    font-size: 7rem;
-    text-align: center;
-    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.247);
-}
-
-.section-01>.section-content>h2>img{
-    margin-left:5%;
-}
-
-.section-01>.section-content>p{
-    padding: 0 3%;
-    font-size: 2.7rem;
-    color: var(--Blanco);
-    font-weight: 300;
-    text-align: center;
-}
-
-.section-01>.section-content>button{
-    width: 80%;
-    margin: 5% auto;
-    text-align: center;
-    border-radius: 30px;
-    display: flex;
-    justify-content: center;
-    background-color: var(--Amarillo-01);
-    box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.226);
-
-    &:hover{
-        transform: scale(1.05);
-        background-color: var(--Amarillo-02);
-    }
-}
-
-.section-01>.section-content>button>a{
-    text-decoration: none;
-
-    
-}
-
-.section-01>.section-content>button>a>h6{
-    padding: 7px;
-    font-size: 30px;
-    font-weight: 500;
-    color: var(--Gris-01);
-}
-/*===========SECCION #2=============*/
-
-.section-02>.section-toppart{
-    margin: 0 18%;
-    margin-top: 10%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: "titulo frases";
-    column-gap: 3%;
-    align-items: center;
-}
-
-.section-02>.section-toppart>.section-title{
-    grid-area: titulo;
-}
-
-.section-02>.section-toppart>.section-title>h2{
-    font-size:120px;
-    font-weight: 700;
-    text-align: center;
-    color: var(--Gris-01);
-
-}
-
-.section-02>.section-toppart>.section-content{
-    align-self: center;
-}
-
-.phrase-01,.phrase-02{
-    padding: 5px 15px;
-    border-right: 6px solid var(--Gris-01);
-    
-}
-
-.phrase-01{
-    margin-bottom: 7%;
-}
-
-.author{
-    margin-top: 15px;
-    font-weight: 600;
-}
-
-.section-02>.section-toppart>.section-content>.phrase>p{
-    font-size: 32px;
-    color: var(--Gris-01);
-    text-align: right;
-}
-
-.section-02{
-    .section-foot{
-        display: flex;
-        justify-content: center;
-        margin: 5% 0;
-        h5{
-            font-size: 32px;
-            font-weight: 300;
-            color: var(--Gris-01);
-            letter-spacing: 1.3px;
-        }
-    }
-}
-
-.section-03{
-
-    margin-top: 7%;
-    background-color: var(--Amarillo-01);
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 0;
-    align-items: center;
-
-    .section-img-logo{
-        width: 180px;
-
-            img{
-                width: 100%;
-            }
-    }
-
-    .section-content{
-        text-align: center;
-        position: relative;
-        color: var(--Blanco);
-
-
-        h3{
-            font-size: 70px;
-            font-weight: 700;
-        }
-
-        h6{
-            margin-top: 1%;
-            font-size: 45px;
-            font-weight: 300;
-        }
-
-        button{
-            position: absolute;
-            bottom: -72px;
-            right: 0;
-            left: 0;
-            width: 40%;
-            margin: auto;
-            background-color: var(--Azul-01);
-            border-radius: 30px;
-            box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.226);
-            
-            &:hover{
-                transform: scale(1.05);
-                background-color: var(--Azul-02) ;
-            }
-
-            a{
-                text-decoration: none;
-                display: flex;
-                justify-content: center;
-                padding: 10px 7px;
-
-                h5{
-                    font-size: 35px;
-                    color: var(--Blanco);
-                    font-weight: 400;
-                    margin-right: 10px;
-                }
-
-                img{
-                    width: 15px;
-                }
-
-                
-            }
-        }
-    }
-}
-
-
-/*=============== ARTICULO 01 ===============*/
-
-.article-01{
-    margin: 5% 10%;
-    margin-right: 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-        
-
-    img{
-        width: 70%;
-    }
-    
-    .article-content{
-        display: flex;
-        background-image: url(../Imgs/media/barsss.svg);
-        background-size: 100%;
-        background-repeat: no-repeat;
-        text-align: right;
-        color: var(--Gris-01);
-        justify-content: center;
-        flex-direction: column;
-        padding-right: 25% ;
-        
-        h3{            
-            margin-bottom: 3%;
-            font-weight: 500;
-        }
-
-        p{
-            padding-left: 15%;
-            margin-bottom: 3%;
-            font-size: 25px;
-        }
-
-        button{
-            align-self: flex-end;
-            padding: 5px;
-            display: flex;
-            background: var(--Azul-01);
-            border-radius: 30px;            
-
-            &:hover{
-                transform: scale(1.05);
-                background: var(--Azul-02);
-            }
-
-            a{
-                width: 100%;
-                color: var(--Blanco);
-                text-align: center;
-                text-decoration: none;
-                
-                p{
-                    padding: 5px 15px;
-                }
-            }
-            
-        }
-    }
-}
+@import './node/Var-styles', './node/mainpage', './node/mediaQueries' ;
