--- a/Code/styles.scss
+++ b/Code/styles.scss
@@ -1,4 +1,4 @@
 
 /*== ROOT ==*/
 
-@import './node/Var-styles', './node/mainpage', './node/mediaQueries' ;
+@import './node/Var-styles','./node/nav-menu', './node/mainpage', './node/mediaQueries', '/Code/node/footer-styles' ;
