--- a/Code/node/_mainpage.scss
+++ b/Code/node/_mainpage.scss
@@ -1,57 +1,6 @@
 
 /*============ HEADER ==============*/
 
-header{
-    background: url("../Imgs/nasa-gYwfpVI2JzM-unsplash.jpg");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    color: var(--Blanco);
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.253);
-}
-
-.header-top{
-    padding-top: 2%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 5%;
-}
-
-.icons{
-    width: 260px;
-    justify-self: right;
-    display: flex;
-    a{
-        width: 100%;
-        margin-left: 3%;
-        img{
-            width: 100%;
-        }
-    }
-}
-
-.Logo{
-    justify-self: center;
-    display: flex;
-    align-items: center;
-    color: var(--Blanco);
-    text-shadow: 0.5px 0.9px 0.2px rgba(0, 0, 0, 0.253);
-}   
-
-#logo-icon-yellowS{
-    margin: 0 3%;
-    width: clamp(10%,100px,30%);
-}
-.bars{
-    width: clamp(10%,300px,14%);
-    height: minmax(10px,30px);
-}
-.bars>#menu-icon{
-    width: 20%;
-    height: clamp(1%,20px,2%);
-    float: right;
-}
-
 .header-center{
     margin: 3% 0 13% 15%;
 }
@@ -92,9 +41,23 @@ header{
     background-color: var(--Glass);
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.267);
 
-    &:hover{
-        background-color: var(--Gris-01);
+}
+
+.nav-categories{
+
+    .hardware:hover{
+        background-color: var(--rojo-01);
     }
+    .software:hover{
+        background-color: var(--verde-01);
+    }
+    .conceptos:hover{
+        background-color: var(--Azul-02);
+    }
+    .articulos:hover{
+        background-color: var(--Gris-02);
+    }
+
 }
 
 .nav-categories>button>a{
@@ -529,58 +492,4 @@ header{
             padding-top: 10%;
         }
     }
-}
-
-.footer-box{
-    background: #000;
-    margin-top: 5%;
-
-.footer{
-    width: 90%;
-    margin: auto;
-    display: grid;
-    grid-template-areas: "logo copy icons";
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-content: space-evenly;
-    align-items: center;
-    justify-items: center;
-    padding: 20px 0;
-
-    .footer-logo{
-        width: 100%;
-        display: flex;
-        grid-area: logo;
-        align-items: center;
-
-        img{
-            width: 75px;
-        }
-
-        p{  
-            margin-left: 3%;
-            color: var(--Blanco);
-            font-size: 30px;
-        }
-    }
-    .footer-copy{
-        color: var(--Blanco);
-
-        p{
-            font-size: 18px;
-        }
-    }
-
-    .footer-icons{
-        width: 190px;
-        justify-self: right;
-        display: flex;
-        a{
-            width: 100%;
-            margin-left: 4%;
-            img{
-                width: 100%;
-            }
-        }
-    }
-}
 }
